--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
             <ul class="navigator-list">
                 <li>
                     <a href="#about" class="navigator-list-item">
-                        About
+                        <i class="fa fa-user"></i>
+                        <p>About</p>
                     </a>
                 </li>
                 <li>
                     <a href="#skills" class="navigator-list-item">
-                        Skills
+                        <i class="fa fa-wrench"></i>
+                        <p>Skills</p>
                     </a>
                 </li>
                 <li>
                     <a href="#projects" class="navigator-list-item">
-                        Projects
+                        <i class="fa fa-briefcase"></i>
+                        <p>Projects</p>
                     </a>
                 </li>
             </ul>
@@ -43,8 +46,8 @@
         <div class="main">
             <div id="about" class="content-page content-page-small">
                 <h1>About Me</h1>
-                <h3>I am a third year Computer Science and Engineering Student at College of Engineering
-                    Trivandrum.<br /> I like to code and build apps.
+                <h3>I am a third year Computer Science and Engineering Student at College of Engineering Trivandrum.
+                    <br /> I like to code and build apps.
                 </h3>
             </div>
 
